[package]
name = "guessing_game"
version = "0.1.0"
authors = ["Sebastián Ávila A. <sebastian4j@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3" # any version that has a public API compatible with version 0.3.14
